Fixed problem with the footer overlapping video list, made video list a scrollable list to reduce page size and other some minor adjustments and fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,8 @@
   margin-left: 80px;
 }
 
-aside {
-  width: 200px;
-  height: 200px;
-  float: right;
-  font-style: italic;
-  background-color: lightgray;
+.scroll{
+  height: 500px;
+  overflow-y: scroll;
 }
 
